--- a/blog-pessoal/src/app/components/default-login/default-login.component.html
+++ b/blog-pessoal/src/app/components/default-login/default-login.component.html
@@ -1,19 +1,21 @@
-<main>
-    <section>
-        <img src="/assets/svg/logo.svg"/>
-        <div>
-            <span>Não possui conta ainda?</span>
-            <span>Realize o cadastro</span>
+<main class="flex items-center h-screen w-full justify-center">
+    <section class="bg-fundocinza justify-center items-center pb-6 pr-10 pl-10">
+        <div class="flex justify-center items-center">
+            <img src="/logo.svg"/>
+        </div>
+        <div class="flex flex-row w-full gap-1 justify-center">
+            <span>{{ subText }}</span>
+            <span class="text-amarelo">{{ yellowSubText }}</span>
         </div>
 
         <div>
             <div>
-                <button>
-
-                </button>
+                <ng-content></ng-content>
             </div>
             <div>
-
+                <button
+                 class="bg-amarelo w-full rounded-2xl border pt-2 pb-2"
+                >{{ bttnText }}</button>
             </div>
         </div>
     </section>
