Feat: Login Integrado

--- a/blog-pessoal/src/app/components/default-login/default-login.component.html
+++ b/blog-pessoal/src/app/components/default-login/default-login.component.html
@@ -6,7 +6,7 @@
 
         <div class="flex flex-row w-full gap-1 justify-center pb-7">
             <span>{{ subText }}</span>
-            <span class="text-amarelo">{{ yellowSubText }}</span>
+            <a (click)="navigate()" class="text-amarelo">{{ yellowSubText }}</a> 
         </div>
 
         <div class="pb-5">
@@ -15,8 +15,9 @@
 
         <div>
             <button
-                class="bg-amarelo w-full rounded-2xl border pt-2 pb-2"
+                class="bg-amarelo w-full rounded-2xl border pt-2 pb-2 disabled:opacity-70"
                 (click)="sumbit()"
+                [disabled]="disableButton"
                 >{{ bttnText }}
             </button>
         </div>
