--- a/blog-pessoal/src/app/pages/dashboard/home/home.component.html
+++ b/blog-pessoal/src/app/pages/dashboard/home/home.component.html
@@ -1,1 +1,16 @@
-<app-navbar>
+<main class="flex flex-col">
+    <div>
+        <app-navbar></app-navbar>
+    </div>
+    <div class="flex flex-row justify-between p-20">
+        <div class="">
+            <app-sidebar></app-sidebar>
+        </div>
+        <div>
+            <span>Feed</span>
+        </div>
+        <div>
+            <span>Right Area</span>
+        </div>
+    </div>
+</main>
