Feat: Iniciando Feed

--- a/blog-pessoal/src/app/pages/dashboard/home/home.component.html
+++ b/blog-pessoal/src/app/pages/dashboard/home/home.component.html
@@ -7,7 +7,7 @@
             <app-sidebar></app-sidebar>
         </div>
         <div>
-            <span>Feed</span>
+            <app-feed></app-feed>
         </div>
         <div>
             <span>Right Area</span>
