feat: Home page finalizada

--- a/blog-pessoal/src/app/pages/dashboard/home/home.component.html
+++ b/blog-pessoal/src/app/pages/dashboard/home/home.component.html
@@ -10,7 +10,7 @@
             <app-feed></app-feed>
         </div>
         <div>
-            <span>Right Area</span>
+            <app-new-post></app-new-post>
         </div>
     </div>
 </main>
