--- a/blog-pessoal/src/app/components/dashboard/navbar/navbar.component.html
+++ b/blog-pessoal/src/app/components/dashboard/navbar/navbar.component.html
@@ -1,41 +1,32 @@
 <nav class="flex flex-row bg-fundocinza opacity-80 p-5 justify-between">
-    @if (mostrarFormulario) {
-        <div class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50">
-            <app-new-post (closeForm)="onFormularioClick()" />
-        </div>
-      }
-
     <section class="flex flex-row pl-15 gap-4">
-        <button
-            (click)="onFormularioClick()"
-            class="bg-amarelo p-2 pt-3 pr-3 pl-3 flex items-center justify-center rounded-2xl">
-            <img src="/create.svg" alt="">
-        </button>
-        <div class="bg-fundocinza opacity-100 flex items-center gap-2 px-3 py-2">
-            <img src="/search.svg" alt="Buscar" class="" />
-            <input
-              type="text"
-              placeholder="Pesquisar"
-              class="text-branco w-full"
-            />
-          </div>
+      <button
+        (click)="onFormularioClick()"
+        class="bg-amarelo p-2 pt-3 pr-3 pl-3 flex items-center justify-center rounded-2xl">
+        <img src="/create.svg" alt="">
+      </button>
+      <div class="bg-fundocinza opacity-100 flex items-center gap-2 px-3 py-2">
+        <img src="/search.svg" alt="Buscar" />
+        <input type="text" placeholder="Pesquisar" class="text-branco w-full" />
+      </div>
     </section>
-
+  
     <section class="flex flex-row pl-5 gap-15">
-        <button>
-            <span class="text-fundo">Home</span>
-        </button>
-        <button>
-            <span class="text-fundo">Meu Perfil</span>
-        </button>
-        <button>
-            <span class="text-fundo">Estatísticas</span>
-        </button>
+      <button><span class="text-fundo">Home</span></button>
+      <button><span class="text-fundo">Meu Perfil</span></button>
+      <button><span class="text-fundo">Estatísticas</span></button>
     </section>
-
+  
     <section class="pr-10">
-        <div class="bg-amarelo p-4 rounded-2xl flex items-center justify-center text-fundo border-amarelo">
-            <span>{{ smallName }}</span>
-        </div>
+      <div class="bg-amarelo p-4 rounded-2xl flex items-center justify-center text-fundo border-amarelo">
+        <span>{{ name[0].toUpperCase() + name[1].toUpperCase() }}</span>
+      </div>
     </section>
-</nav>
+  </nav>
+  
+  @if (mostrarFormulario) {
+    <div class="fixed inset-0 z-[9999] bg-black bg-opacity-60 backdrop-blur-sm flex items-center justify-center">
+      <app-new-post (closeForm)="onFormularioClick()" />
+    </div>
+  }
+  
