--- a/blog-pessoal/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/blog-pessoal/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <aside class="flex flex-col gap-4 ">
     <section class="flex flex-col justify-center items-center gap-3">
         <div class="bg-fundocinza p-15 rounded-full flex justify-between items-center">
-            <span class="text-4xl text-branco opacity-70">{{ smallName }}</span>
+            <span class="text-4xl text-branco opacity-70">{{ name[0].toUpperCase() + name[1].toUpperCase() }}</span>
         </div>
         <div>
             <span class="text-branco opacity-70 font-serif text-2xl">
