--- a/blog-pessoal/src/app/components/dashboard/components/button-sidebar/button-sidebar.component.html
+++ b/blog-pessoal/src/app/components/dashboard/components/button-sidebar/button-sidebar.component.html
@@ -1,6 +1,11 @@
-<div class="flex items-center gap-6 p-4 transition-all duration-300 hover:bg-amarelo hover:rounded-2xl hover:cursor-pointer">
-    <ng-content></ng-content>
-    <button class="text-white font-medium hover:cursor-pointer">
-      {{nameButton}}
-    </button>
+<div
+  (click)="sumbit()"
+  [attr.data-active]="isActiveRoute()"
+  class="flex items-center gap-6 p-4 transition-all duration-300 cursor-pointer rounded-2xl 
+         hover:bg-amarelo"
+>
+  <ng-content></ng-content>
+  <button class="text-white font-medium cursor-pointer">
+    {{ nameButton }}
+  </button>
 </div>
