Feat: Adicionando Graficos e Filtros

--- a/blog-pessoal/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/blog-pessoal/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
         route="/meuPerfil"
         (submit)="mudarPagina('/meuPerfil')"
       >
-        <img src="/meuPerfil.svg" alt="" />
+        <img src="/perfil.svg" alt="" />
       </app-button-sidebar>
 
       <app-button-sidebar
@@ -37,7 +37,7 @@
         route="/stats"
         (submit)="mudarPagina('/stats')"
       >
-        <img src="/Estatistica.svg" alt="" />
+        <img src="/dados.svg" alt="" />
       </app-button-sidebar>
     </div>
 
