--- a/blog-pessoal/src/app/components/dashboard/stats-component/stats-component.component.html
+++ b/blog-pessoal/src/app/components/dashboard/stats-component/stats-component.component.html
@@ -12,7 +12,7 @@
   <!-- Área com rolagem -->
   <div class="overflow-y-auto max-h-[40vh] flex flex-col gap-5 pr-2">
     <section class="bg-fundocinza rounded-2xl flex flex-col p-6 gap-4">
-      <div class="bg-fundo opacity-80 rounded-2xl p-6 flex flex-col gap-4 text-branco opacity-70">
+      <div class="bg-fundo opacity-80 rounded-2xl p-6 flex flex-col gap-4 text-branco">
         <span>Quantidade de Posts no Blog: {{ totalPosts }}</span>
         <span>Quantidade de Temas do Blog: {{ totalTemas }}</span>
         <span>Tema com mais Posts: {{ temaMaisPosts }}</span>
