--- a/blog-pessoal/src/app/pages/login/login.component.html
+++ b/blog-pessoal/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
         </app-primary-input>
         <app-primary-input
             formControlName="senha"
-            type="senha"
+            type="password"
             placeholder="Senha"
         >
             <img src="/lock.svg" alt="Login">       
