--- a/blog-pessoal/src/app/components/dashboard/feed/feed.component.html
+++ b/blog-pessoal/src/app/components/dashboard/feed/feed.component.html
@@ -13,6 +13,13 @@
         <option [value]="tema.descricao">{{ tema.descricao }}</option>
       }
     </select>
+
+    <input
+    type="date"
+    [(ngModel)]="dataSelecionada"
+    (change)="filtrarPostsPorData()"
+    class="bg-fundo text-branco p-2 rounded-2xl"
+  />
   </div>
 
   <section class="bg-fundocinza rounded-2xl flex flex-col p-6 gap-4 overflow-y-auto max-h-[650px] items-center">
